<resources>
    <string name="app_name">DigitalHouseAndroid</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="foobar">FOOBAR</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nome">Nome</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="exibir">Exibir</string>
    <string name="meu_nome">Meu nome é</string>
    <string name="temperatura_em_c">Temperatura em ºC</string>
    <string name="digite_a_temperatura">Digite a temperatura</string>
    <string name="converter">Converter</string>
    <string name="f">ºF</string>
    <string name="horas_trabalhadas">Horas Trabalhadas</string>
    <string name="valor_da_hora">Valor da hora</string>
    <string name="_180">180</string>
    <string name="_15">15</string>
    <string name="r">R$</string>
</resources>