<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".aula16.MeuNomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorTextBlack"
        android:layout_marginTop="24dp"
        android:text="@string/nome">
    </TextView>

    <EditText
        android:id="@+id/edtMeuNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:textColor="@color/colorTextBlack"
        android:backgroundTint="@color/colorTextBlack"
        android:hint="@string/digite_seu_nome">
    </EditText>

    <Button
        android:id="@+id/btnExibir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:textColor="@color/colorwhite"
        android:background="@color/colorButtonMeuNome"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:text="@string/exibir">

    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/meu_nome"
        android:textColor="@color/colorTextBlack"
        android:textStyle="bold"
        android:textSize="26sp">

    </TextView>

    <TextView
        android:id="@+id/txtNomeDigitado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:textColor="@color/colorTextBlack"
        android:textStyle="bold"
        android:textSize="26sp"
        tools:text="X">
    </TextView>

</LinearLayout>