<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".aula16.CalculoSalarioActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/horas_trabalhadas"
        android:textColor="@color/colorTextBlack"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtHorasTrabalhadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorTextBlack"
        android:hint="@string/_180"
        android:inputType="number"
        android:textColor="@color/colorTextBlack"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/valor_da_hora"
        android:textColor="@color/colorTextBlack"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtValorDaHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorTextBlack"
        android:hint="@string/_15"
        android:inputType="number"
        android:textColor="@color/colorTextBlack"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="60dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="60dp"
        android:background="@color/colorButtonMeuNome"
        android:text="Calcular"
        android:textColor="@color/colorwhite"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/txtTemperaturaConvertida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:textColor="@color/colorTextBlack"
            android:textSize="26sp"
            android:text="@string/r"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="@color/colorTextBlack"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:text="XXXX,XX"/>

    </LinearLayout>

</LinearLayout>